--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -48,4 +48,13 @@
   <% } %>
 
   <%- css('/css/style.css') %>
+  
+  <!-- PeterCat Assistant -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@petercatai/assistant/dist/umd/assistant.min.css"></link>
+  <script src="https://cdn.jsdelivr.net/npm/react/umd/react.development.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.development.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/dayjs/dayjs.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/antd/dist/antd.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/lottie-web/build/player/lottie.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@petercatai/assistant/dist/umd/assistant.min.js"></script>
 </head>
