--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -23,7 +23,7 @@
       }) %>
     <% } %>
 
-    <a href="#top" class="top"><%= __('Post.Top') %></a>
+    <a href="/" class="top"><%= __('Post.Top') %></a>
   </div>
 </article>
 
