fix: Update hello message

--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -10,6 +10,7 @@
   PetercatLUI.initAssistant({
     apiDomain: 'https://api.petercat.ai',
     token: 'baf39b4e-797e-49e7-9745-5ffaad963cc5',
+    helloMessage: "I'm your bookworm servant, ask me anything",
     starters: ['introduce the website', 'summary', 'recommend a book'],
     clearMessage: true
   });
