feat: Add dark mode

--- a/source/css/_partial/paginator.styl
+++ b/source/css/_partial/paginator.styl
@@ -11,10 +11,10 @@
   }
 
   a {
-    color: #777;
+    color: var(--gray-color);
 
     &:hover {
-      color: #000;
+      color: var(--link-hover-color);
     }
   }
 }
