--- a/source/css/_partial/tags.styl
+++ b/source/css/_partial/tags.styl
@@ -13,7 +13,7 @@
     transition: color 0.3s;
     
     &:hover {
-      color: #0078e7;
+      color: var(--link-hover-color);
       text-decoration: underline;
     }
   }
