--- a/source/css/_partial/archive.styl
+++ b/source/css/_partial/archive.styl
@@ -15,14 +15,14 @@
 
       .post-date {
         font-size: 80%;
-        color: #aaa;
-	font-family: Monaco, monospace, Hiragino Sans GB, Microsoft YaHei, WenQuanYi, Airal, sans-serif;
+        color: var(--gray-color);
+	      font-family: Monaco, monospace, Hiragino Sans GB, Microsoft YaHei, WenQuanYi, Airal, sans-serif;
       
         @media screen and (max-width: 425px) {
           float: none;
           margin-left: 0.5em;
           font-size: 90%;
-          color: #999;
+          color: var(--gray-color);
         }
       }
 
