--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -1,11 +1,11 @@
 footer {
   margin: 0.5em 20px 0 20px;
-  border-top: 3px double #ccc;
+  border-top: 3px double var(--border-color);
   padding: 1em 0 1em 0;
   font-size: 80%;
-  color: #888;
+  color: var(--gray-color);
 
   .author {
-    color: #000;
+    color: var(--text-color);
   }
 }
