--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -10,13 +10,13 @@
 
   .subtitle {
     font-size: 14px;
-    color: gray;
+    color: var(--gray-color);
   }
 
   .menu {
     margin: 0;
     padding: 0;
-    border-top: 1px solid #ccc;
+    border-top: 1px solid var(--border-color);
     margin-top: 20px;
 
     .menu-item {
@@ -27,10 +27,10 @@
     }
 
     .menu-item-link {
-      color: #999;
+      color: var(--gray-color);
 
       &:hover {
-        color: #000;
+        color: var(--link-hover-color);
       }
     }
   }
