--- a/source/css/_partial/post.styl
+++ b/source/css/_partial/post.styl
@@ -12,7 +12,7 @@
 
     td, th {
       padding: 6px 13px;
-      border: 1px solid #dfe2e5;
+      border: 1px solid var(--border-color);
     }
   }
 
@@ -60,8 +60,8 @@
   blockquote {
     margin: 0;
     padding: 0 15px;
-    color: #777;
-    border-left: 4px solid #ddd;
+    color: var(--gray-color);
+    border-left: 4px solid var(--border-color);
   }
 
   pre {
@@ -70,13 +70,13 @@
     overflow: auto;
     font-size: 110%;
     line-height: 1.5;
-    background-color: #f7f7f7;
+    background-color: var(--code-background);
   }
 
   code {
     font-family: Monaco, source code pro, Inconsolata, monospace, Hiragino Sans GB, Microsoft YaHei, WenQuanYi, Airal, sans-serif;
     font-size: 1.02em;
-    background: #eee;
+    background: var(--code-background);
     margin: 5px;
     padding: 0 5px;
   }
@@ -100,10 +100,10 @@
 
     .top {
       float: right;
-      color: #666;
+      color: var(--gray-color);
 
       &:hover {
-        color: #000;
+        color: var(--link-hover-color);
       }
     }
 
@@ -111,7 +111,7 @@
       display: inline-block;
       padding: 0;
       margin: 0 0 0.5em 0;
-      color: #999;
+      color: var(--gray-color);
 
       .post-tag-list-item {
         display: inline-block;
